# bgmdl-core

./: .gitignore  Cargo.toml  README.md
.github/workflows/: lint.yml  rust.yml
libs/core/: Cargo.toml  README.md
libs/core/src/: lib.rs
libs/core/src/bangumi/: mod.rs
libs/core/src/db/: conn.rs  init.rs
libs/core/src/declare/: bangumi.rs  db_bgmdata.rs  db_tasks.rs  db_user_entity.rs  error.rs  mod.rs
libs/core/src/declare/db/: mod.rs
libs/core/src/declare/db/entity/: bgmdata.rs  bgmdownload.rs  bgmeps.rs  count.rs  mod.rs  task.rs  task_status.rs  user.rs
libs/core/src/declare/db/iden/: bgmdata.rs  bgmdownload.rs  bgmeps.rs  count.rs  mod.rs  task.rs  task_status.rs  user.rs
libs/core/src/env/: mod.rs
libs/core/src/macros/: mod.rs
libs/core/src/model/: mod.rs
libs/core/src/model/bangumi/: mod.rs
libs/core/src/model/count/: mod.rs
libs/core/src/model/task/: mod.rs
libs/core/src/model/user/: mod.rs
libs/core/src/service/: mod.rs
libs/core/src/source/: mod.rs  nyaa.rs
libs/core/src/task/: mod.rs  model.rs  save.rs
libs/core/src/task/run/: change_name.rs  download.rs  download_all.rs  mod.rs  report_error.rs
libs/core/src/user/: mod.rs
libs/core/src/utils/: error.rs  mod.rs
libs/core/src/utils/data/: default.json  mod.rs
libs/core/src/utils/db/: conn.rs  init.rs  mod.rs
libs/core/src/utils/parsetitle/: mod.rs
libs/core/src/utils/pluginload/: mod.rs
libs/core/src/utils/regex/: mod.rs
libs/database_connect/: Cargo.toml
libs/download_link/: Cargo.toml
libs/download_link/src/: lib.rs
libs/macro_db_init/: Cargo.toml
libs/macro_db_init/src/: lib.rs
libs/macro_lib/: Cargo.toml  build.rs
libs/macro_lib/src/: default_handle.rs  lib.rs
libs/qb_connect/: Cargo.toml
libs/qb_connect/src/: lib.rs
src/: default.rs  env.rs  handle.rs  main.rs  require.rs
src/command/: changepwd.rs  init.rs  mod.rs  start.rs
src/declare/: config.rs
src/declare/api/: task.rs  user.rs
src/handler/: bgm.rs  error_handler.rs  log.rs  mod.rs  task.rs  user.rs
src/load/: downloader.rs
src/macros/: mod.rs
src/model/: task.rs
src/service/: mod.rs
src/service/run/: log.rs
src/utils/: check_perm.rs  config_load.rs  db.rs  encryption.rs  inquire.rs  logger.rs  mod.rs
