workspace = { members = ["libs/core", "libs/download_link", "libs/qb_connect", "libs/macro_lib", "libs/database_connect"] }
[package]
name = "bangudownload"
version = "0.1.0"
edition = "2021"

[dependencies]
feed-rs = "2.1.0"
libloading = "0.8.5"
nyaa-si = "0.1.3"
rss = "2.0.8"
tokio = "1.39.2"
"download_link" = { path = "libs/download_link" }
"macro_lib" = { path = "libs/macro_lib" }
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
env_logger = "0.11.5"
actix-web = "4.9.0"
log = "0.4.22"
clap = "4.5.16"
