[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
nyaa-si = "0.1.3"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["blocking"] }
rss = "2.0.8"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio = "1.39.2"

[lib]
