[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
nyaa-si = "0.1.3"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["blocking"] }
rss = "2.0.8"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.128"
tokio = "1.39.2"
sea-orm = { version = "1.0.0-rc.5", features = [ "sqlx-postgres", "sqlx-sqlite", "macros" ] }
log = "0.4.22"
state = "0.6.0"
download_link = { path = "../download_link" }
lazy_static = "1.5.0"
dyn-clone = "1.0.17"
libloading = "0.8.5"
chrono = "0.4.38"
futures = "0.3.31"

[dependencies.sea-orm-migration]
version = "1.0.0-rc.5"
features = [
    "runtime-tokio-rustls",            # `ASYNC_STD` feature
    "sqlx-postgres",         # `DATABASE_DRIVER` feature
    "sqlx-sqlite",           # `DATABASE_DRIVER` feature 
]

[lib]
