[package]
name = "qb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"download_link" = { path = "../download_link" }
dyn-clone = "1.0.17"
lazy_static = "1.5.0"
log = "0.4.22"
qbit-rs = "0.4.3"
tokio = "1.39.3"

[lib]
crate-type = ["cdylib"]
